tests/fixtures/invalid/pow_bool_float_bool.py
# Cannot call pow() with Bool, Float, Bool
x = pow(True, 1.0, True)
